pagination added to list-view
pagination added to page
has custom style

--- a/payment/list-view.html
+++ b/payment/list-view.html
@@ -207,36 +207,31 @@
                     </p>
                 </div>
             </li>
-            <li class="snippet-list__item">
-                <img class="avatar avatar--55" src="public/assets/images/9DJGemCS-55x55.jpg" alt="avatar">
-                <div class="content">
-                    <header>
-                        <h2>
-                            <a href="#"> بیت کوین چیست و چگونه کار می کند؟</a>
-                        </h2>
-                        <span class="details">توسط جعفر جان در تاریخ 4 آبان 1395</span>
-                    </header>
-                    <p>
-                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است. بسیاری از دولت‌ها هنوز هم نمی‌دانند در مورد بیت کوین باید چه تصمیمی ...
-                        <a href="#">ادامه مطلب</a>
-                    </p>
+            <!-- page navigation -->
+            <div class="page-navigation">
+                <div class="container">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            <li>
+                                <a href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li class="active"><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li>
+                                <a href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-            </li>
-            <li class="snippet-list__item">
-                <img class="avatar avatar--55" src="public/assets/images/9DJGemCS-55x55.jpg" alt="avatar">
-                <div class="content">
-                    <header>
-                        <h2>
-                            <a href="#"> بیت کوین چیست و چگونه کار می کند؟</a>
-                        </h2>
-                        <span class="details">توسط جعفر جان در تاریخ 4 آبان 1395</span>
-                    </header>
-                    <p>
-                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است. بسیاری از دولت‌ها هنوز هم نمی‌دانند در مورد بیت کوین باید چه تصمیمی ...
-                        <a href="#">ادامه مطلب</a>
-                    </p>
-                </div>
-            </li>
+            </div>
+            <!-- !END page navigation -->
         </ul>
     </div>
 </section>
