layout bug fixed
addtoany bug fixed
article column changed

--- a/payment/single.html
+++ b/payment/single.html
@@ -148,7 +148,7 @@
     <!-- Article Content -->
     <div class="container">
         <div class="row">
-            <div class="col-sm-10 col-sm-offset-1">
+            <div class="col-sm-12">
 
                 <p>بازار معاملات آتی بخش ضروری از معاملات بورس و سرمایه‌گذاری هستند. هر چند بیشتر از آنها برای معامله دارایی‌هایی که نوسانات قیمتی کمتری دارد، استفاده می‌شود. اما با اجرای این قرارداد، بیت کوین تا حدودی مشروعیت پیدا می‌کند و این موضوع سبب تحریک وال استریت خواهد شد.
 
@@ -180,7 +180,7 @@
     <div class="page-navigation">
         <div class="container">
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1">
+                <div class="col-sm-12">
                     <div class="page-navigation--home">
                         <a href="#" class="">بازگشت به لیست مقالات
                             <i class="fa fa-angle-double-left" aria-hidden="true"></i>
