Sticky navbar and navbar resize debug
- sticky navbar created
- resize problem of slideup fixed

--- a/payment/index.html
+++ b/payment/index.html
@@ -31,7 +31,7 @@
 <!-- Site Wrapper -->
 <div class="wrapper">
     <!-- Header -->
-    <header class="header">
+    <header id="fixed-header" class="header">
         <div class="container">
                 <!-- Site Logo -->
                 <div class="header__logo pull-left">
