--- a/payment/list-view.html
+++ b/payment/list-view.html
@@ -29,7 +29,7 @@
 <body>
 
 <!-- Header -->
-<header class="header">
+<header id="fixed-header" class="header">
     <div class="container">
         <!-- Site Logo -->
         <div class="header__logo pull-left">
