--- a/payment/single.html
+++ b/payment/single.html
@@ -29,7 +29,7 @@
 <body>
 
 <!-- Header -->
-<header class="header">
+<header id="fixed-header" class="header">
     <div class="container">
         <!-- Site Logo -->
         <div class="header__logo pull-left">
