some html elements repeated
for better preview

--- a/payment/index.html
+++ b/payment/index.html
@@ -581,6 +581,78 @@
                     </div>
                 </div>
             </div>
+            <div class="panel simple">
+                <div class="panel-heading">
+                    <h1 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                            پرداخت آنلاین
+                        </a>
+                    </h1>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="container">
+                            <h2>ارائه انواع خدمات ارزی</h2>
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <p>
+                                        طراح، معمار، عکاس و یا دارای حرفه خاصی هستید که با
+                                        مشتریان خارج از کشور همکاری دارید؟
+                                        درامد اینترنتی خود را به ریال نقد کنید.
+                                    </p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <img src="public/assets/images/icon-service.png" alt="service">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel content-box">
+                <div class="panel-heading">
+                    <h1 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            تبت نام آزمون
+                        </a>
+                    </h1>
+                </div>
+                <div id="collapse3" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="container">
+                            <h2>ارائه انواع خدمات ارزی</h2>
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="service__card card">
+                                        <div class="card__image">
+                                            <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                        </div>
+                                        <a href="#" class="btn large secondary">ثبت نام تافل</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="service__card card">
+                                        <div class="card__image">
+                                            <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                        </div>
+                                        <a href="#" class="btn large secondary">ثبت نام آیلتس</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="service__card card">
+                                        <div class="card__image">
+                                            <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                        </div>
+                                        <a href="#" class="btn large secondary">ثبت نام GRE</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- !END Accordions -->
