latest post section created
latest post section containing latest news and latest blogs, has been created.

--- a/payment/index.html
+++ b/payment/index.html
@@ -658,12 +658,144 @@
     <!-- !END Accordions -->
 
     <!-- Dummy data -->
-    <section class="dummy text-center" style="padding: 80px 0;">
+    <!--<section class="dummy text-center" style="padding: 80px 0;">
             <div class="container">
                 <p>این قسمت در دست احداث است.</p>
             </div>
-        </section>
+        </section>-->
     <!-- !END Dummy data -->
+    
+    <!-- Latest Posts -->
+    <section class="latest-posts">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="latest-posts-box">
+                        <header>
+                            <h1>آخرین اخبار</h1>
+                        </header>
+                        <ul class="latest-news">
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                            افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی).
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="latest-posts-box">
+                        <header>
+                            <h1>آخرین پست بلاگ</h1>
+                        </header>
+                        <ul class="latest-news">
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                            <a href="#">
+
+                                <span class="date">5 اردیبهشت 1395</span>
+                                <h2>
+
+                                    افزایش ناگهانی قیمت بیت کوین
+
+                                </h2>
+                                <p>
+                                    آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است.
+                                </p>
+
+                            </a>
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- !END Latest Posts -->
 
     <!-- Footer -->
     <footer>
