comment slide added
comment slide created

--- a/payment/index.html
+++ b/payment/index.html
@@ -52,10 +52,10 @@
                             <a href="#home">خدمات</a>
                         </li>
                         <li class="nav-list__item">
-                            <a href="#home">وبلاگ</a>
+                            <a href="list-view.html">وبلاگ</a>
                         </li>
                         <li class="nav-list__item">
-                            <a href="#home">اخبار</a>
+                            <a href="list-view.html">اخبار</a>
                         </li>
                         <li class="nav-list__item">
                             <a href="#home">درباره ما</a>
@@ -685,7 +685,7 @@
 
                                     </h2>
                                     <p>
-                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است.
                                     </p>
 
                                 </a>
@@ -700,7 +700,7 @@
 
                                     </h2>
                                     <p>
-                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است.
                                     </p>
 
                                 </a>
@@ -715,7 +715,7 @@
 
                                     </h2>
                                     <p>
-                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی).
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است.
                                     </p>
 
                                 </a>
@@ -730,12 +730,17 @@
 
                                     </h2>
                                     <p>
-                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است.
                                     </p>
 
                                 </a>
                             </li>
                         </ul>
+                        <div class="more">
+                            <a href="#">آرشیو اخبار
+                                <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -774,21 +779,73 @@
 
                                 </a>
                             </li>
+                        </ul>
+                    </div>
+                    <div class="latest-posts-box">
+                        <header>
+                            <h1>نظرات کاربران</h1>
+                        </header>
+                        <ul class="latest-news owl-carousel js-comments-slider">
                             <li class="latest-news__item">
-                            <a href="#">
+                                <a href="#">
 
-                                <span class="date">5 اردیبهشت 1395</span>
-                                <h2>
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
 
-                                    افزایش ناگهانی قیمت بیت کوین
+                                        افزایش ناگهانی قیمت بیت کوین
 
-                                </h2>
-                                <p>
-                                    آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است.
-                                </p>
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این.
+                                    </p>
 
-                            </a>
-                        </li>
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
+                            <li class="latest-news__item">
+                                <a href="#">
+
+                                    <span class="date">5 اردیبهشت 1395</span>
+                                    <h2>
+
+                                        افزایش ناگهانی قیمت بیت کوین
+
+                                    </h2>
+                                    <p>
+                                        آیا می‌دانید بیت کوین چیست؟ طی چند سال گذشته، خرید بیت کوین به خوبی توجه عمومی را به خود جلب کرده و برخی را هم به ثروت هنگفتی رسانده است. در عین حال این ارز رمزپایه (کریپتوکارنسی) همواره مورد اتهام جرائم اینترنتی بوده و تفکر مردم درباره پول را به کلی تغییر داده است.
+                                    </p>
+
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
