register part and password strength checking
-register added to layout and selectable through top tabs
- strength of password will be checked by external plugin

--- a/payment/login.html
+++ b/payment/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,10 +41,10 @@
                 <div class="login-box-container">
                     <div class="login-tabs-container">
                         <ul class="login-tabs js-tabs-control">
-                            <li class="login-tabs__tab active">
+                            <li class="login-tabs__tab" data-target="login">
                                 <a href="/login">ورود</a>
                             </li>
-                            <li class="login-tabs__tab">
+                            <li class="login-tabs__tab active" data-target="register">
                                 <a href="/register">عضویت</a>
                             </li>
                         </ul>
@@ -53,30 +53,93 @@
                 </div>
                 <div class="login-content">
                     <form action="/login">
+                        <!-- Email -->
                         <div class="form-input">
-                            <input type="email" class="" id="email" name="email" value="" autocomplete="off">
+                            <input type="email" class="english" id="email" name="email" value="" autocomplete="off" required>
                             <label for="email" class="form-input-label">آدرس ایمیل</label>
                             <div class="form-input-underline"></div>
                             <label for="email" class="form-input-massage">ایمیل خود را وارد کنید.</label>
                         </div>
+                        <!-- Password -->
                         <div class="form-input">
-                            <input type="password" class="" id="password" name="password" value="" autocomplete="off">
+                            <input type="password" class="english" id="password" name="password" value="" autocomplete="off" required>
                             <label for="password" class="form-input-label">رمز عبور</label>
                             <div class="form-input-underline"></div>
-                            <button class="password-toggle js-toggle-visibility">
+                            <button class="password-toggle js-toggle-visibility" data-passinput="password">
                                 <i class="fa fa-eye" aria-hidden="true"></i>
                             </button>
                         </div>
-                        <div class="form-alert danger">
+                        <div class="form-alert text-danger">
                             <span>اطلاعات وارد شده نامعتبر می باشد.</span>
                         </div>
                         <div class="form-submit">
-                            <button class="btn secondary" type="submit" disabled>ورود</button>
+                            <button class="btn secondary" type="submit" name="submit"  disabled>ورود</button>
                         </div>
                     </form>
                     <div class="pass-recovery">
                         <a href="#">رمز عبور را فراموش کرده‌اید؟</a>
                     </div>
+                </div>
+                <div class="register-content">
+                    <!-- Register form -->
+                    <form action="/register">
+                        <!-- Email -->
+                        <div class="form-input">
+                            <input type="email" class="english" id="reg-email" name="email" value="" autocomplete="off" required>
+                            <label for="reg-email" class="form-input-label">آدرس ایمیل</label>
+                            <div class="form-input-underline"></div>
+                            <label for="reg-email" class="form-input-massage">ایمیل خود را وارد کنید.</label>
+                        </div>
+                        <!-- Password -->
+                        <div class="form-input">
+                            <input type="password" class="english" id="reg-password" name="password" value="" autocomplete="off" required>
+                            <label for="reg-password" class="form-input-label">رمز عبور</label>
+                            <div class="form-input-underline"></div>
+                            <button class="password-toggle js-toggle-visibility" data-passinput="reg-password">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </button>
+                            <div class="pwd-container" id="pwd-container">
+                                <div class="pw-progress">
+                                </div>
+                                <span class="pw-verdict"></span>
+                            </div>
+                        </div>
+                        <!-- Name -->
+                        <div class="form-input">
+                            <input type="text" class="" id="reg-name" name="email" value="" autocomplete="off" required>
+                            <label for="reg-name" class="form-input-label">نام</label>
+                            <div class="form-input-underline"></div>
+                            <label for="reg-name" class="form-input-massage">نام خود را وارد کنید.</label>
+                        </div>
+                        <!-- Last Name -->
+                        <div class="form-input">
+                            <input type="text" class="" id="reg-lastname" name="email" value="" autocomplete="off" required>
+                            <label for="reg-lastname" class="form-input-label">نام خانوادگی</label>
+                            <div class="form-input-underline"></div>
+                            <label for="reg-lastname" class="form-input-massage">نام خانوادگی خود را وارد کنید.</label>
+                        </div>
+                        <!-- Mobile Phone -->
+                        <div class="form-input">
+                            <input type="number" class="english" id="reg-mobile" name="email" value="" autocomplete="off" required>
+                            <label for="reg-mobile" class="form-input-label">شماره موبایل</label>
+                            <div class="form-input-underline"></div>
+                            <label for="reg-mobile" class="form-input-massage">شماره موبایل خود را وارد کنید.</label>
+                        </div>
+                        <!-- National id card number -->
+                        <div class="form-input">
+                            <input type="number" class="english" id="reg-idnumber" name="email" value="" autocomplete="off" required>
+                            <label for="reg-idnumber" class="form-input-label">کد ملی</label>
+                            <div class="form-input-underline"></div>
+                            <label for="reg-idnumber" class="form-input-massage">کد ملی خود را وارد کنید.</label>
+                        </div>
+
+                        <div class="form-alert text-danger">
+                            <span>اطلاعات وارد شده نامعتبر می باشد.</span>
+                        </div>
+                        <div class="form-submit">
+                            <button class="btn secondary" type="submit" name="submit">ثبت نام</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -91,8 +154,8 @@
 <script src="public/assets/libs/jquery/jquery.min.js"></script>
 <!-- Bootstrap js -->
 <script src="public/assets/libs/bootstrap/js/bootstrap.min.js"></script>
-<!-- Owl Carousel -->
-<script src="public/assets/libs/owlcarousel/owl.carousel.min.js"></script>
+<!-- pwstrength.bootstrap -->
+<script src="public/assets/libs/pwstrength.bootstrap/dist/pwstrength-bootstrap.min.js"></script>
 
 <!-- Custom js -->
 <script src="public/assets/js/login-form.js"></script>
