particle.js added to background
particles canves added to background

--- a/payment/login.html
+++ b/payment/login.html
@@ -31,6 +31,9 @@
 <!-- Site Wrapper -->
 <div class="wrapper">
     <section class="login">
+        <div class="bg-particles" id="bg-particles">
+
+        </div>
         <h1>
             <a href="index.html">
                 <img src="public/assets/images/logo.svg" alt="logo">
@@ -41,10 +44,10 @@
                 <div class="login-box-container">
                     <div class="login-tabs-container">
                         <ul class="login-tabs js-tabs-control">
-                            <li class="login-tabs__tab" data-target="login">
+                            <li class="login-tabs__tab active" data-target="login">
                                 <a href="/login">ورود</a>
                             </li>
-                            <li class="login-tabs__tab active" data-target="register">
+                            <li class="login-tabs__tab" data-target="register">
                                 <a href="/register">عضویت</a>
                             </li>
                         </ul>
@@ -156,6 +159,10 @@
 <script src="public/assets/libs/bootstrap/js/bootstrap.min.js"></script>
 <!-- pwstrength.bootstrap -->
 <script src="public/assets/libs/pwstrength.bootstrap/dist/pwstrength-bootstrap.min.js"></script>
+
+<!-- Particles.js -->
+<script src="public/assets/libs/particles/particles.min.js"></script>
+<script src="public/assets/libs/particles/app.js"></script>
 
 <!-- Custom js -->
 <script src="public/assets/js/login-form.js"></script>
